# dara_app_gallery

./: .gitignore  README.md
dara_custom_css/: README.md  pyproject.toml
dara_custom_css/dara_custom_css/: main.py
dara_custom_css/dara_custom_css/pages/: css_units.py  raw_css.py  resources.py
dara_data_interactivity/: README.md  pyproject.toml
dara_data_interactivity/dara_data_interactivity/: __init__.py  data_interactivity.py  definitions.py  main.py  plotting_utils.py
dara_data_interactivity/data/: 401k.csv
dara_dataset_wrangler/: README.md  pyproject.toml
dara_dataset_wrangler/dara_dataset_wrangler/: dataset_wrangler.py  main.py  plotting_utils.py
dara_graph_viewer/: README.md  pyproject.toml
dara_graph_viewer/dara_graph_viewer/: definitions.py  main.py  utils.py
dara_graph_viewer/dara_graph_viewer/pages/: __init__.py  connections.py  influential_individuals.py  introduction.py  strongest_paths.py
dara_graph_viewer/data/: friendships.csv  interactions.csv
dara_interactivity/: README.md  pyproject.toml
dara_interactivity/dara_interactivity/: custom_components.py  definitions.py  main.py  tasks.py
dara_llm/: README.md  pyproject.toml
dara_llm/dara_llm/: chatbox.py  definitions.py  main.py  sales_predictions.py  tasks.py
dara_llm/data/: ols_model.pickle
dara_plot_interactivity/: README.md  pyproject.toml
dara_plot_interactivity/dara_plot_interactivity/: definitions.py  main.py  plot_interactivity.py  plotting_utils.py
dara_plot_interactivity/data/: countries.json  gdp.csv  sanctions.csv
(+5 files in other folders)
